[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atunnel"
version = "1.0.0"
description = "A-tunnel is a tool to expose localhost to the public internet using Cloudflare Quick Tunnels"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Abodx9", email = "abodx@gmx.de"},
]
requires-python = ">=3.9"
keywords = ["cloudflare", "tunnel", "localhost", "expose", "public"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]

[project.urls]
Repository = "https://github.com/Abodx9/A-tunnel"


[project.scripts]
atunnel = "atunnel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["atunnel*"]